# CG_WS_14_15

./: ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mymath.h  raytracing.sln  scene.cpp  scene.h  sceneobject.h
raytracing/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  main.cpp  myimage.h  raytracingBIN.vcxproj  raytracingBIN.vcxproj.filters  sceneobject.cpp
